@@ -1,3 +1,8 @@
+2003-05-31  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* actions.c, calendar.c, info.c, logview.c, monitor.c,
+	zoom.c:  HIG related improvements.
+
 2003-05-30  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* actions.c, info.c, log_repaint.c, logrtns.c, logview.c,
